--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
    "name": "BugMeNot",
    "description": "Give you a list of users for te current page.",
-   "version": "1.1",
+   "version": "27.0",
    "manifest_version": 2,
 
    "browser_action": {
-      "default_icon": "img/icon_16.png",
+      "default_icon": "assets/img/icon_16.png",
       "default_popup": "popup.html"
    },
+   "background": {
+      "scripts": ["assets/libs/jquery-3.3.1.min.js","assets/js/background.js"],
+      "persistent": true
+   },
    "icons": {
-      "128": "img/icon_128.png",
-      "16": "img/icon_16.png",
-      "48": "img/icon_48.png"
+      "128": "assets/img/icon_128.png",
+      "16": "assets/img/icon_16.png",
+      "48": "assets/img/icon_48.png"
    },
    "permissions": [
       "http://bugmenot.com/*",
-      "tabs"
+      "https://cdnjs.cloudflare.com/*",
+      "http://cdnjs.cloudflare.com/*",
+      "tabs",
+      "storage"
    ]
 }
